--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title>Clark Hobbs</title>
+    <title>Clark Hobbs Landing Page</title>
+    <script src = "js/interactive.js"></script>
+
+    <style>
+
+      .name {
+        color: aqua;
+      }
+
+
+
+
+
+
+
+
+    </style>
   </head>
+
   <body>
-    <h1>Hello World</h1>
-    <button>Click me! </button>
-    <p>This is my personal landing page!</p>
+  
+   <h1 class = "name">Clark Hobbs</h1>
+   <button> Click me! </button>
+  
+   <p>This is my personal landing page!</p>
   </body>
+
 </html>
