--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta charset="utf-8">
     <title>Clark Hobbs Landing Page</title>
     <script src = "js/interactive.js"></script>
-
-    <style>
-
-      .name {
-        color: aqua;
-      }
-
-
-
-
-
-
-
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-  
-   <h1 class = "name">Clark Hobbs</h1>
-   <button> Click me! </button>
-  
-   <p>This is my personal landing page!</p>
+    <div id="GitHub">
+
+    </div>
+
+    <div id="LinkedIn">
+
+    </div>
+
+    <div id="Hobbies">
+
+    </div>
+
+    <div id="Youtube">
+      
+    </div>
+   
   </body>
 
 </html>
