--- a/index.html
+++ b/index.html
@@ -9,22 +9,15 @@
   </head>
 
   <body>
-    <div id="GitHub">
+    <div class="grid-container">
+      <div class="grid-item" id="GitHub">GitHub</div>
 
-    </div>
+      <div class="grid-item" id="LinkedIn">LinkedIn</div>
 
-    <div id="LinkedIn">
+      <div class="grid-item" id="Hobbies">Hobbies</div>
 
-    </div>
-
-    <div id="Hobbies">
-
-    </div>
-
-    <div id="Youtube">
-      
-    </div>
-   
+      <div class="grid-item" id="Youtube">Youtube</div>
+   </div>
   </body>
 
 </html>
