--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <body>
+  <title>Clark Hobbs</title>
+  <body class="body-contents">
     <div class="grid-container">
-      <div class="grid-item" id="GitHub">GitHub</div>
+      <a href="https://github.com/clarkhobbs"><button class="grid-item" id="GitHub">GitHub</button></a>
 
-      <div class="grid-item" id="LinkedIn">LinkedIn</div>
+      <a href="https://www.linkedin.com/in/clark-hobbs/"><button class="grid-item" id="LinkedIn">LinkedIn</button></a>
 
-      <div class="grid-item" id="Hobbies">Hobbies</div>
+      <a href=""><button class="grid-item" id="Hobbies">Hobbies</button></a>
 
-      <div class="grid-item" id="Youtube">Youtube</div>
+      <a href="https://www.youtube.com/channel/UCay7xt35XyWd9E1XeVzxngw"><button class="grid-item" id="Youtube">YouTube</button></a> 
    </div>
   </body>
 
