--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clark Hobbs Landing Page</title>
     <script src = "js/interactive.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
-  <title>Clark Hobbs</title>
+
   <body class="body-contents">
     <div class="grid-container">
-      <a href="https://github.com/clarkhobbs"><button class="grid-item" id="GitHub">GitHub</button></a>
+      <a href="https://github.com/clarkhobbs"><button class="grid-item" id="GitHub">
+        GitHub
+      </button></a>
 
-      <a href="https://www.linkedin.com/in/clark-hobbs/"><button class="grid-item" id="LinkedIn">LinkedIn</button></a>
+      <a href="https://www.linkedin.com/in/clark-hobbs/"><button class="grid-item" id="LinkedIn">
+        LinkedIn
+      </button></a>
 
-      <a href=""><button class="grid-item" id="Hobbies">Hobbies</button></a>
+      <a href=""><button class="grid-item" id="Hobbies">
+        <h1>Hobbies</h1>
+        <h2>Learn about some of the things I like to do in my free time!</h2>
+      </button></a>
 
-      <a href="https://www.youtube.com/channel/UCay7xt35XyWd9E1XeVzxngw"><button class="grid-item" id="Youtube">YouTube</button></a> 
+      <a href="https://www.youtube.com/channel/UCay7xt35XyWd9E1XeVzxngw"><button class="grid-item" id="Youtube">
+        <h1>YouTube</h1>
+        <h2>Mainly me in the mountains!</h2>
+      </button></a> 
    </div>
   </body>
 
