--- a/index.html
+++ b/index.html
@@ -3,14 +3,59 @@
 
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clark Hobbs Landing Page</title>
-    <script src = "js/interactive.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
+  <body>
+    <div class="navigation">
+        <span style="--i:0;--x:-1;--y:0;">
+            <ion-icon name="camera-outline"></ion-icon>
+        </span>
+        <span style="--i:1;--x:1;--y:0;">
+            <ion-icon name="diamond-outline"></ion-icon>
+        </span>
+        <span style="--i:2;--x:0;--y:-1;">
+            <ion-icon name="chatbubble-outline"></ion-icon>
+        </span>
+        <span style="--i:3;--x:0;--y:1;">
+            <ion-icon name="alarm-outline"></ion-icon>
+        </span>
+        <span style="--i:4;--x:1;--y:1;">
+            <ion-icon name="game-controller-outline"></ion-icon>
+        </span>
+        <span style="--i:5;--x:-1;--y:-1;">
+            <ion-icon name="moon-outline"></ion-icon>
+        </span>
+        <span style="--i:6;--x:0;--y:0;">
+            <ion-icon name="close-outline"></ion-icon>
+        </span>
+        <span style="--i:7;--x:-1;--y:1;">
+            <ion-icon name="water-outline"></ion-icon>
+        </span>
+        <span style="--i:8;--x:1;--y:-1;">
+            <ion-icon name="time-outline"></ion-icon>
+        </span>
+    </div>
 
-  <body class="body-contents">
+    <!-- ========= Sctipt ======== -->
+    <script>
+        const navigation = document.querySelector(".navigation");
+
+        navigation.addEventListener("click", () => {
+            navigation.classList.toggle("active");
+        })
+    </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+    
+
+
+  <!-- <body class="body-contents">
     <div class="grid-container">
       <a href="https://github.com/clarkhobbs"><button class="grid-item" id="GitHub">
         GitHub
@@ -30,6 +75,6 @@
         <h2>Mainly me in the mountains!</h2>
       </button></a> 
    </div>
-  </body>
+  </body> -->
 
 </html>
