--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clark Hobbs Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
+    <div class="name">
+      <div class="pic-wrapper">
+        <img class="pic" src="kirito.png" alt="kirito pfp" />
+      </div>
+      <h1 class="text">Clark Hobbs</h1>
+    </div>
     <div class="navigation">
-        <span class ="item" style="--i:0;--x:-1;--y:0;">
-            <ion-icon name="camera-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:1;--x:1;--y:0;">
-            <ion-icon name="diamond-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:2;--x:0;--y:-1;">
-            <ion-icon name="chatbubble-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:3;--x:0;--y:1;">
-            <ion-icon name="alarm-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:4;--x:1;--y:1;">
-            <ion-icon name="game-controller-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:5;--x:-1;--y:-1;">
-            <ion-icon name="moon-outline"></ion-icon>
-        </span>
-        <span class ="item-close" style="--i:6;--x:0;--y:0;">
-            <ion-icon name="close-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:7;--x:-1;--y:1;">
-            <ion-icon name="water-outline"></ion-icon>
-        </span>
-        <span class ="item" style="--i:8;--x:1;--y:-1;">
-            <ion-icon name="time-outline"></ion-icon>
-        </span>
+      <span class="item" style="--i: 0; --x: -1; --y: 0">
+          <ion-icon name="logo-linkedin"></ion-icon> </span>
+      <span class="item" style="--i: 1; --x: 1; --y: 0">
+          <ion-icon name="logo-github"></ion-icon> </span>
+      <span class="item" style="--i: 2; --x: 0; --y: -1">
+          <ion-icon name="logo-instagram"></ion-icon> </span>
+      <span class="item" style="--i: 3; --x: 0; --y: 1">
+          <ion-icon name="logo-youtube"></ion-icon> </span
+      >
+      <!-- <span class="item" style="--i: 4; --x: 1; --y: 1">
+        <ion-icon name="game-controller-outline"></ion-icon>
+      </span>
+      <span class="item" style="--i: 5; --x: -1; --y: -1">
+        <ion-icon name="moon-outline"></ion-icon>
+      </span> -->
+      <span class="item-close" style="--i: 6; --x: 0; --y: 0">
+        <ion-icon name="close-outline"></ion-icon>
+      </span>
+      <!-- <span class="item" style="--i: 7; --x: -1; --y: 1">
+        <ion-icon name="water-outline"></ion-icon>
+      </span>
+      <span class="item" style="--i: 8; --x: 1; --y: -1">
+        <ion-icon name="time-outline"></ion-icon>
+      </span> -->
     </div>
 
     <!-- ========= Sctipt ======== -->
     <script>
       const navigation = document.querySelector(".navigation");
-      let num = 0; //0 means the nav is closed
-
       navigation.addEventListener("click", () => {
-      navigation.classList.toggle("active");
-      
-      })
+        navigation.classList.toggle("active");
+      });
     </script>
 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
-    
-
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 
   <!-- <body class="body-contents">
     <div class="grid-container">
@@ -78,5 +81,4 @@
       </button></a> 
    </div>
   </body> -->
-
 </html>
